// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiseasesColumnConfiguration component should render column "acronym": acronym 1`] = `
<DocumentFragment>
  HNPCC1
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "alternative_names": alternative_names 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Hereditary non-polyposis colorectal cancer 3
    </li>
    <li>
      HNPCC3
    </li>
    <li>
      Lynch cancer family syndrome
    </li>
    <li>
      Lynch syndrome
    </li>
    <li>
      Lynch syndrome type I
    </li>
    <li>
      Lynch syndrome type II
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "cross_references": cross_references 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="no-wrap"
      >
        MIM: 
        <a
          class="external-link"
          href="https://www.omim.org/entry/120435"
          rel="noopener"
          target="_blank"
        >
          120435
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         (phenotype)
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/C0009405"
          rel="noopener"
          target="_blank"
        >
          C0009405
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/C1333990"
          rel="noopener"
          target="_blank"
        >
          C1333990
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MedGen: 
        <a
          class="external-link"
          href="https://www.ncbi.nlm.nih.gov/medgen/CN068508"
          rel="noopener"
          target="_blank"
        >
          CN068508
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        MeSH: 
        <a
          class="external-link"
          href="https://meshb.nlm.nih.gov/record/ui?ui=D003123"
          rel="noopener"
          target="_blank"
        >
          D003123
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  An autosomal dominant disease associated with marked increase in cancer susceptibility. It is characterized by a familial predisposition to early-onset colorectal carcinoma (CRC) and extra- colonic tumors of the gastrointestinal, urological and female reproductive tracts. HNPCC is reported to be the most common form of inherited colorectal cancer in the Western world. Clinically, HNPCC is often divided into two subgroups. Type I is characterized by hereditary predisposition to colorectal cancer, a young age of onset, and carcinoma observed in the proximal colon. Type II is characterized by increased risk for cancers in certain tissues such as the uterus, ovary, breast, stomach, small intestine, skin, and larynx in addition to the colon. Diagnosis of classical HNPCC is based on the Amsterdam criteria: 3 or more relatives affected by colorectal cancer, one a first degree relative of the other two; 2 or more generation affected; 1 or more colorectal cancers presenting before 50 years of age; exclusion of hereditary polyposis syndromes. The term 'suspected HNPCC' or 'incomplete HNPCC' can be used to describe families who do not or only partially fulfill the Amsterdam criteria, but in whom a genetic basis for colon cancer is strongly suspected.
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    class="no-wrap"
    href="/diseases/DI-00550"
  >
    DI-00550
  </a>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "keywords": keywords 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-0362"
      >
        Hereditary nonpolyposis colorectal cancer
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Hereditary non-polyposis colorectal cancer 1
</DocumentFragment>
`;

exports[`DiseasesColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28cc_disease%3ADI-00550%29"
      >
        1 UniProtKB entry
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_disease%3ADI-00550%29+AND+%28reviewed%3Atrue%29"
      >
        1 reviewed UniProtKB entry
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
